# openpane

./: LICENSE  README.md  gitignore  pyproject.toml
openpane/: __init__.py  backends.py  cli.py  core.py  generator.py
