[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "openpane"
version = "0.1.0"
description = "Open the pane. See the world beyond your terminal."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["terminal", "weather", "cli", "ambient", "developer-tools", "pane"]
classifiers = [
    "Environment :: Console",
    "Topic :: Terminals",
    "Topic :: Utilities",
]

[project.scripts]
openpane = "openpane.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openpane*"]
